k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: living-room-gym
  labels:
    app: living-room-gym

spec:
  type: LoadBalancer
  selector:
    app: living-room-gym
  ports:
    - name: web
      port: 3001
